# clipboard-manager

./: .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package-linux.yml  package-macos.yml  package-windows.yml  release.yml
.opencode/plans/: 2026-07-18-qt6-clipboard-manager-design.md
assets/: AppIcon.icns
clipboard-manager-qt/: CMakeLists.txt  resources.qrc
clipboard-manager-qt/src/: main.cpp
clipboard-manager-qt/src/clipboard/: ClipboardItem.h  ClipboardMonitor.cpp  ClipboardMonitor.h
clipboard-manager-qt/src/database/: Database.cpp  Database.h  Note.h
clipboard-manager-qt/src/models/: ClipboardListModel.cpp  ClipboardListModel.h
clipboard-manager-qt/src/qml/: ClipboardItemDelegate.qml  ClipboardSearchField.qml  Popup.qml
clipboard-manager-qt/src/ui/: HistoryTab.cpp  HistoryTab.h  NotesTab.cpp  NotesTab.h  PopupWidget.cpp  PopupWidget.h  TrayManager.cpp  TrayManager.h
clipboard-manager-qt/tests/: test_clipboard.cpp  test_database.cpp  test_e2e.cpp  test_historytab.cpp  test_notestab.cpp
clipboard-manager-wails/: app.go  go.mod  go.sum  main.go  wails.json
clipboard-manager-wails/frontend/: index.html  package-lock.json
clipboard-manager-wails/frontend/src/: App.svelte  Tree.svelte
clipboard-manager-wails/frontend/src/lib/: ClipboardTab.svelte  NotesTab.svelte  PasswordsTab.svelte
clipboard-manager-wails/frontend/wailsjs/go/: models.ts
clipboard-manager-wails/frontend/wailsjs/go/main/: App.d.ts  App.js
clipboard-manager-wails/services/: clipboard.go  database.go  kdbx.go  models.go  storage.go
clipboard-manager-wails/tray/: tray.go  tray_darwin.go  tray_impl_darwin.m  tray_linux.go  tray_windows.go
clipboard-mng-xcode/ClipboardManager/: Package.swift
clipboard-mng-xcode/ClipboardManager/.swiftpm/xcode/package.xcworkspace/xcuserdata/ionutale.xcuserdatad/: UserInterfaceState.xcuserstate
clipboard-mng-xcode/ClipboardManager/.swiftpm/xcode/xcuserdata/ionutale.xcuserdatad/xcschemes/: xcschememanagement.plist
clipboard-mng-xcode/ClipboardManager/ClipboardManager/: ClipboardManager.swift  DatabaseManager.swift  Info.plist  MainView.swift  Models.swift  NotesView.swift  PasswordsView.swift  StorageManager.swift
clipboard-mng-xcode/ClipboardManager/ClipboardManager/Assets.xcassets/AppIcon.appiconset/: Contents.json
docs/superpowers/plans/: 2026-07-18-qt6-clipboard-manager.md
src/main/: main.ts  preload.cjs  preload.ts
src/renderer/: App.svelte
src/types/: electron.d.ts
xcode/ClipboardManager/: Package.swift
xcode/ClipboardManager/ClipboardManager/: ClipboardManagerApp.swift
